--- a/frontend/dexter/src/app/components/profiles/rankcard-customizer/rankcard-customizer.component.html
+++ b/frontend/dexter/src/app/components/profiles/rankcard-customizer/rankcard-customizer.component.html
@@ -4,7 +4,7 @@
     <p>You're currently not logged in, none of the changes you make will be saved. Use the navigation bar on the left to log in.</p>
   </div>
   <div class="d-flex flex-column justify-content-center align-items-center align-self-center mt-4">
-      <div class="mat-display-2 fw-bold text-center">Rankcard Customization</div>
+    <div class="mat-display-2 font-weight-bold text-center">Rankcard Customization</div>
   </div>
   <div class="rankcard-preview">
     <app-rankcard-preview class="rankcard-preview" [model]="model" [username]="username" [defaultBgOptions]="defaultBgOptions" [pfpUrl]="pfp"></app-rankcard-preview>
