Added hammerjs for gesture control Turned chess timers into ng-templates

--- a/frontend/dexter/src/app/components/basic/switch/switch.component.css
+++ b/frontend/dexter/src/app/components/basic/switch/switch.component.css
@@ -22,7 +22,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: hsl(0, 60%, 60%);
   -webkit-transition: .4s;
   transition: .4s;
 }
@@ -40,11 +40,11 @@
 }
 
 input:checked + .slider {
-  background-color: var(--primary-color);
+  background-color: hsl(120, 60%, 60%);
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px var(--primary-color);
+  box-shadow: 0 0 1px hsl(120, 60%, 60%);
 }
 
 input:checked + .slider:before {
