--- a/frontend/dexter/src/app/components/games/game-display/profile-display/profile-display.component.css
+++ b/frontend/dexter/src/app/components/games/game-display/profile-display/profile-display.component.css
@@ -11,9 +11,11 @@
 
 .profile-name {
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: calc(1.5em);
+  margin-bottom: 0em;
 }
 
 .profile-rating {
+  margin: calc(0.5em - 6px) 0 0 0;
   font-style: italic;
 }
